--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Welcome to Celebrities and Movies Page</h1>
+
+<a href="/celebrities/create">Create a new Celebrity</a>
+<hr>
+<a href="/celebrities">All Celebrities</a>
+<hr>
+<a href="/movies/create">Create a new Movies</a>
+<hr>
+<a href="/movies">All Movies</a>
