--- a/views/movies/new-movie.hbs
+++ b/views/movies/new-movie.hbs
@@ -10,11 +10,7 @@
     <textarea name="plot" cols="30" rows="4"> </textarea>
   </label>
   <label> Cast:
-    <select name="cast" multiple>
-     {{#each celebrityArr}}
-      <option value="{{this._id}}">{{this.name}}</option>
-      {{/each}}
-    </select>
+    <textarea name="cast" cols="30" rows="4"> </textarea>
   </label>
   <button type="submit">Create a movie</button>
 </form>
